# Pi-Normality-Hypothesis

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  build_backend.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
data/: pi_decimals.txt  test_sequences.txt
docs/: AUDIT.md  REFERENCES.md  ROADMAP.md  SCIENTIFIC_NOTES.md  pi_normal_hypothesis.md  user_guide.md
notebooks/: PiSequence.ipynb
pi_lab/: __init__.py  __main__.py  cli.py
pi_lab/digits/: __init__.py  generator.py  io.py
pi_lab/search/: __init__.py  core.py
pi_lab/statistics/: __init__.py  frequency.py
pi_lab/utils/: __init__.py  paths.py
pi_lab/visualization/: __init__.py  frequency.py
pi_lab/web/: __init__.py  app.py
pi_lab/web/templates/: index.html  result.html
src/: __init__.py  frequency_analysis.py  meaningful_sequences.py  pi_generator.py  sequence_search.py  utils.py
tests/: conftest.py  test_digits.py  test_frequency.py  test_reproducibility.py  test_search.py
web/: app.py
web/static/: style.css
web/templates/: index.html  result.html
