[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "pi-lab"
version = "0.1.0"
description = "Finite pi digit generation, search, and frequency exploration tools."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "Pi-Normality-Hypothesis contributors" }]
dependencies = [
    "flask",
    "matplotlib",
    "mpmath",
]

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
pi-lab = "pi_lab.cli:main"


[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
